--- a/sample/manifest.yaml
+++ b/sample/manifest.yaml
@@ -1,20 +1,25 @@
 ---
-apiVersion: v1
+apiVersion: v1 
 kind: Pod
 metadata:
   name: mypod
   labels:
-    devops: aws
+    khaja: aws
 spec:
   containers:
-    - name: mycontainer
-      image: nginx
-      ports: 
-        - containerPort: 80
-          hostPort: 8080
-          protocol: TCP
+     - name: mycontainer
+       image: mangarathi/dockerepository
+         ports:
+           - containerPort: 5000
+             hostPort: 1234
+             protocol: TCP
+
+
+
+
+
   
 
 
 
- 
+  
