--- a/init-resource-limits/init-lresources.yaml
+++ b/init-resource-limits/init-lresources.yaml
@@ -17,11 +17,11 @@ spec:
       image: nginx
       resources:
         requests:
-          memory: "64Mi"
-          cpu: "250m"
+          memory: '64Mi'
+          cpu: '250m'
         limits:
-          memory: "128Mi"
-          cpu: "500m"
+          memory: '128Mi'
+          cpu: '500m'
        ports:
          - containerPort: 80
            hostPort: 8080
