--- a/init-resource-limits/init-lresources.yaml
+++ b/init-resource-limits/init-lresources.yaml
@@ -14,14 +14,14 @@ spec:
         - 15s
   containers:
     - name: mycontainer
-      image: nginx
+      image: nginx:1.25
       resources:
         requests:
-          memory: '64Mi'
-          cpu: '250m'
+          memory: "64Mi"
+          cpu: "250m"
         limits:
-          memory: '128Mi'
-          cpu: '500m'
+          memory: "128Mi"
+          cpu: "500m"
        ports:
          - containerPort: 80
            hostPort: 8080
