--- a/init-resource-limits/init-lresources.yaml
+++ b/init-resource-limits/init-lresources.yaml
@@ -7,7 +7,7 @@ metadata:
     app: test
 spec:
   initContainers:
-    - name: myinitContainers
+    - name: myinitcontainers
       image: alpine
       command:
         - sleep
