--- a/cronjob/cronjob.yaml
+++ b/cronjob/cronjob.yaml
@@ -25,7 +25,7 @@ spec:
                 command:
                   - sleep
                   - 15s
-                
+            restartPolicy: OnFailure 
 
 
     
