--- a/servicefile/service.yaml
+++ b/servicefile/service.yaml
@@ -7,7 +7,8 @@ metadata:
     app: test
 spec:
   selector:
-    type: ClusterIP
+    name: myreplica  
+  type: ClusterIP
   ports:
     - targetPort: 80
       port: 8080
